# Atlas

./: Implement.txt  README.md  build.sh  gui.md
build_main/: Makefile
build_main/client/: Makefile
build_main/editor/: Makefile
build_main/engine/: Makefile
build_main/runtime/: Makefile
build_main/server/: Makefile
build_main/tests/: Makefile
client/: main.cpp
docs/: 05_NETWORKING.md  06_WORLD_GENERATION.md  09_DEVELOPMENT_ROADMAP.md  14_REPLAY_AND_PROOFS.md  16_ATLAS_AI.md  21_FORMAL_SPECIFICATIONS.md  ARCHITECTURE.md  ATLAS_CORE_CONTRACT.md  ATLAS_LOCKDOWN_CHECKLIST.md  BUILDING.md  IMPLEMENTATION_PATH.md  NEXT_IMPLEMENTATION_TASKS.md  PROJECT_COMPLETION_STATUS.md
editor/: CMakeLists.txt  main.cpp
editor/ai/: TemplateAIBackend.cpp
editor/assistant/: AssetGraphAssistant.cpp  (+1 more)
engine/: CMakeLists.txt
projects/eveoffline/module/: CMakeLists.txt
runtime/: main.cpp
schemas/: atlas.project.v1.json
server/: main.cpp
tests/: CMakeLists.txt  main.cpp  test_asset_assistant.cpp  test_asset_browser.cpp  test_asset_cooker.cpp  test_cross_platform_save.cpp  test_editor_ui_fix.cpp  test_enforcement.cpp  test_engine.cpp  test_font_bootstrap.cpp  test_golden_replays.cpp  test_include_firewall.cpp  test_marketplace_importer.cpp  test_menu_overlay_and_system_tab.cpp  test_next_tasks.cpp  test_next_tasks_phase14.cpp  test_next_tasks_phase6.cpp  test_next_tasks_phase7.cpp  test_next_tasks_phase9.cpp  test_render.cpp  test_replication.cpp  test_streaming.cpp
tileeditor/: main.cpp
tools/: contract_scan.py  replay_inspector.py  verify_dependencies.sh
(+73 files in other folders)
